# grc-tool

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
frontend/: Cargo.toml  Trunk.toml  clean_err.txt  err.txt  index.html
frontend/.cargo/: config.toml
frontend/src/: app.rs  main.rs
frontend/src/api/: invoke.rs
frontend/src/components/: audit_row.rs  chat_bubble.rs  compliance_bar.rs  engagement_intake.rs  evidence_card.rs  framework_pill.rs  help_panel.rs  mod.rs  requirement_row.rs  risk_heatmap.rs  sidebar.rs  stat_card.rs  status_badge.rs  task_row.rs
frontend/src/pages/: ai_system_detail.rs  audit_trail.rs  cross_reference.rs  dashboard.rs  engagement_detail.rs  engagements.rs  evidence_vault.rs  framework_navigator.rs  fria.rs  gap_analysis.rs  guide.rs  llm_assistant.rs  mod.rs  reports.rs  risk_matrix.rs  settings.rs
frontend/style/: custom.css  pico.min.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial_schema.sql  002_seed_framework_data.sql  003_fria_assessments.sql  004_engagement_intake_scoping.sql  005_add_config_updated_action.sql
src-tauri/src/: crypto.rs  lib.rs  main.rs
src-tauri/src/commands/: assessment_cmds.rs  audit_cmds.rs  config_cmds.rs  dashboard_cmds.rs  engagement_cmds.rs  evidence_cmds.rs  fria_cmds.rs  llm_cmds.rs  mod.rs  report_cmds.rs  requirement_cmds.rs  risk_cmds.rs  system_cmds.rs  task_cmds.rs
src-tauri/src/db/: mod.rs  pool.rs
src-tauri/src/llm/: client.rs  (+1 more)
src-tauri/templates/: compliance_report.html  gap_analysis.html  risk_report.html
(+24 files in other folders)
