[package]
name = "grc-command-center"
version = "0.1.0"
edition = "2021"

[lib]
name = "grc_command_center_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
askama = "0.12"
aes-gcm = "0.10"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
grc-shared = { path = "../shared" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
